<resources>
    <string name="app_name">ExerciSet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="downloapptor">DownloApptor</string>
    <string name="notificapp">NotificApp</string>
    <string name="calculapptor">CalculApptor</string>
    <string name="enter_numbers">Enter two numbers</string>
    <string name="notification">Notificapp</string>
    <string name="first_digit_entry_hint">Enter first number</string>
    <string name="second_digit_entry_hint">Enter second number</string>
    <string name="adding_sign">+</string>
    <string name="subtract_sign">-</string>
    <string name="divide_sign">/</string>
    <string name="multiple_sign">*</string>
    <string name="result_text">The Result</string>
    <string name="result">0.00</string>
    <string name="user_name">Pawel Wojdera</string>
    <string name="user_mail">paulwojdera@gmail.com</string>
    <string name="valid_number">Please enter valid number</string>
    <string name="parse_xml">Parse XML File</string>
    <string name="top_apps_title">Top 10 free apps from Appstore</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="youtapp">YoutApp</string>
    <string name="notificapp_instruction">Click button to receive special PDF file with propoer notification!</string>
    <string name="notificapp_button_text">Get the priceless PDF</string>
    <string name="download_complete">Tap to download!</string>
    <string name="notification_description">Just TAP on notification and Your priceless PDF will be available at device storage.</string>
    <string name="exception_text">There was an exception during downloading PDF</string>
    <string name="imagapptor_title">ImagApp</string>
    <string name="imagapp_title">ImagApp</string>
    <string name="flickrThumb">flickrThumb</string>
</resources>
