<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/calculapptor"
            android:icon="@drawable/caclulator"
            android:title="@string/calculapptor" />
        <item
            android:id="@+id/notificapp"
            android:icon="@drawable/advert"
            android:title="@string/notificapp" />
        <item
            android:id="@+id/downloapptor"
            android:icon="@drawable/download"
            android:title="@string/downloapptor" />
        <item
            android:id="@+id/youtApp"
            android:icon="@android:drawable/ic_menu_upload_you_tube"
            android:title="@string/youtapp" />

        <item
            android:id="@+id/imagapp"
            android:icon="@android:drawable/ic_menu_report_image"
            android:title="@string/imagapp_title" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
