<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.wojder.exerciset.view.fragments.CalculatorFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enterNumbers"
        android:padding="@dimen/small_padding"
        android:text="@string/enter_numbers"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
        android:id="@+id/first_digit_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/first_digit_entry_hint" />

    <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
        android:id="@+id/second_digit_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/second_digit_entry_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/adding_sign"
            style="?android:attr/buttonStyleSmall"/>

        <Button
            android:id="@+id/button_subtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/subtract_sign"
            style="?android:attr/buttonStyleSmall"/>

        <Button
            android:id="@+id/button_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide_sign"
            style="?android:attr/buttonStyleSmall" />

        <Button
            android:id="@+id/button_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiple_sign"
            style="?android:attr/buttonStyleSmall" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CLR"
            android:id="@+id/clear_button" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/result_text"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/result_text"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/result"
        android:textAppearance="?android:textAppearanceLarge"
        android:text="@string/result"
        android:layout_gravity="center"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/calc_image"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
